# Example

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Example.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
App/: App.vcxproj  App.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  main.cpp
Bar/: Bar.vcxproj  Bar.vcxproj.filters  CMakeLists.txt  bar.cpp  bar.h  cmake_install.cmake
Foo/: CMakeLists.txt  Foo.vcxproj  Foo.vcxproj.filters  cmake_install.cmake  foo.cpp
